fix Dark mode (default)

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,7 +8,10 @@ body,
   padding: 0;
 }
 
-html.dark {
+:root {
+  background: #fff;
+}
+:root.dark {
   background: #121212;
 }
 
